# eywa_trees

./: .gitignore  README.md  demo.ipynb  demo_pt.ipynb  demodengue.ipynb  fidelity.ipynb  pyproject.toml
reports/: remove_border.py
src/eywa_trees/: README.md  __init__.py  api.py  utils.py
src/eywa_trees/backend/: app.py  ecdf_rule_group.py  feature_bins.py  focused_tree.py  go_plot.py  path_statistics.py  pathway_builders.py  pset.py  rule_engine.py  sankey_plot.py  subpath_engine.py  vis_builders.py  vistree.py
src/eywa_trees/backend/adapters/: __init__.py  base.py  sklearn_forest.py  sklearn_tree.py  xgboost.py
src/eywa_trees/tabs/: __init__.py  boundary.py  model.py  predict.py  rule_tree.py  sub_path.py
