[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eywa_trees"
version = "0.2.0"
description = "eywa_trees: Explainability toolbox for tree-based decision models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pedro Tonso" }]
dependencies = [
    "dash>=3.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eywa_trees*"]
